# mhfrontier-cq-tool

./: .eslintrc.js  .gitignore  Annotations.md  Cargo.toml  README.md  a.js  obj.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: ci.yml  core-ci.yml  desktop-release.yml
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  quest.rs  questlist.rs  re_frontier.rs  utils.rs
apps/desktop/src-tauri/src/db/: api.rs  commands.rs  config.rs  db.rs  enums.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/db/questlist/: mod.rs  types.rs
apps/desktop/src-tauri/src/db/quests/: mod.rs  types.rs
core/: Cargo.toml
core/src/: main.rs  (+2 more)
desktop/: package-lock.json  package.json  tsconfig.json
editor/: Cargo.toml
notes/: area_stages.md  flags.md
output/: 21085d0.json
src/: App.tsx  constants.ts  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/refrontier/: .gitignore  Cargo.toml
src-tauri/refrontier/src/: lib.rs  refrontier.rs
src-tauri/refrontier/src/crypto/: ecd.rs  mod.rs
src-tauri/refrontier/src/pack/: mod.rs
src-tauri/refrontier/src/pack/jpk/: jpk.rs  mod.rs
src-tauri/refrontier/src/pack/jpk/decoders/: hfi.rs  hfirw.rs  lz.rs  mod.rs  rw.rs
src-tauri/refrontier/src/pack/jpk/encoders/: lz.rs  mod.rs  rw.rs
src-tauri/refrontier/src/tests/: mod.rs
src-tauri/refrontier/src/utils/: custom_error.rs
web/: index.html  package-lock.json  package.json
(+287 files in other folders)
