[package]
name = "rusty-refrontier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better_cursor = { path= "../better_cursor" }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
crc32fast = "1.4.0"
